[Fix:] Fix feature Gene Category page dynamically change with red border while upload csv files-highMountain-2024/11/11 21:56

--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@ button,
 
 .bg-pic {
   background-image: url("../public/bg/background_outrun.jpg");
-  background-size: 100% 100%;
+  background-size: cover;
 }
 
 .ant-btn-primary {
