--- a/src/pages/Pdf/style.css
+++ b/src/pages/Pdf/style.css
@@ -40,7 +40,7 @@ html {
         font-size: 16rem;
         width: 100vw;
         height: 847rem;
-        border: 1rem rgba(0, 0, 0, 0.1);
+        border: 1px rgba(0, 0, 0, 0.1);
     }
 }
 
@@ -50,7 +50,7 @@ table.supplement {
 }
 
 table.supplement, table.supplement th, table.supplement td {
-    border: 1rem solid #C5C5C5
+    border: 1px solid #C5C5C5
 }
 
 table.supplement th:nth-child(1) {
@@ -84,10 +84,21 @@ table.supplement th {
 }
 
 table.supplement td {
-    padding-left: 4rem;
-    padding-right: 4rem;
+    padding-left: 3.25rem;
+    padding-right: 3.25rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+}
+
+table.supplement td:nth-last-child(5) {
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+table.supplement td:nth-last-child(4) {
+    padding-left: 0rem;
+    padding-right: 0rem;
 }
 
 table tr {
-    height: 31rem;
+    height: 30rem;
 }
