[FIX] Copy and Paste the past 5 days work from version 2 folder-hihgmountain430@gmail.com-2024/11/25 01:45

--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,7 @@ button,
 }
 
 .serviceManage {
-  background-image: url("../public/BG3.png");
+  background-image: url("../public/bg/Background_Gradients.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
