[Fix] Complete the pdf layout express and reflect the change of 2nd design-highmountain-2024/11/27 12:19

--- a/src/App.css
+++ b/src/App.css
@@ -65,11 +65,11 @@
   background-color: #808080!important;
 }
 .table {
-  margin: auto;
+  /* margin: auto; */
 }
 .table table,
 .table td {
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
 }
 .ckEditor {
   flex-direction: column;
