[Fix] BatchSize:6 Loading Page Style full || gene info table theader 1,3 || ListItem componect textcolor-highmoutain430-2024/11/28 19:57

--- a/src/pages/Pdf/style.css
+++ b/src/pages/Pdf/style.css
@@ -171,9 +171,16 @@ table.geneInfo th {
     padding: 5.9rem 10rem;
 }
 
-table.geneInfo td {
-    /* padding: 8.4rem 0rem; */
+/* table.geneInfo td {
     padding-bottom: 8.4rem;
+} */
+
+table.geneInfo td:nth-child(1) {
+   padding-bottom: 0rem;
+}
+
+table.geneInfo td:nth-child(3) {
+   padding-bottom: 0rem;
 }
 
 .blue {
