[Fix] Disable the login feature-highmoutain430-2024/12/01 04:31

--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ button,
 .bg-pic {
   background-image: url("../public/bg/background_outrun.jpg");
   background-size: cover;
+  background-position: center;
 }
 
 .ant-btn-primary {
