--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
 html {
   font-family: 'Noto Sans JP', sans-serif;
-  font-size: 14px;
+  /* font-size: 14px; */
   
   /* color: hsla(var(--bc)/ var(--tw-text-opacity, 1)); */
 }
