[fix] downloaded PDF file name change - highmountain430@gmail -2024/12/02 01:00

--- a/src/pages/Pdf/style.css
+++ b/src/pages/Pdf/style.css
@@ -40,7 +40,7 @@ html {
         font-size: 16rem;
         width: 100vw;
         aspect-ratio: 595/847;
-        border: 1px rgba(0, 0, 0, 0.1);
+        /* border: 1px rgba(0, 0, 0, 0.1); */
     }
 }
 
