--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,7 @@ button,
 }
 
 .bg-pic {
-  background-image: url("../public/bg/background_outrun.webp");
+  background-image: url("../public/bg/backg.png");
   background-size: cover;
   background-position: center;
 }
